# smart_home

./: .gitignore  build.sh  docker-compose.yml
proj/: CMakeLists.txt  README.md
proj/3th_lib/src/json/: build.sh
proj/3th_lib/src/openssl/: Makefile.in  build.sh  configdata.pm  libcrypto.pc  libssl.pc  libssl.so.3  openssl.pc
proj/3th_lib/src/openssl/apps/: openssl
proj/3th_lib/src/openssl/crypto/: buildinf.h
proj/3th_lib/src/openssl/crypto/asn1/: libcrypto-lib-a_strex.d  libcrypto-shlib-a_strex.d
proj/3th_lib/src/openssl/crypto/bn/: libcrypto-lib-bn_gf2m.d  libcrypto-shlib-bn_gf2m.d
proj/3th_lib/src/openssl/crypto/ec/: libcrypto-lib-ec_lib.d  libcrypto-shlib-ec_lib.d
proj/3th_lib/src/openssl/crypto/http/: libcrypto-lib-http_lib.d  (+1 more)
proj/3th_lib/src/openssl/fuzz/: bignum-test
proj/3th_lib/src/openssl/test/: aesgcmtest  afalgtest  asn1_decode_test  asn1_encode_test  asn1_stable_parse_test  asn1_string_table_test  asn1_time_test  asynciotest  bad_dtls_test  bftest  bio_callback_test  bio_core_test  bio_enc_test  bio_memleak_test  bio_prefix_text  bio_pw_callback_test  bio_pw_callback_test-bin-bio_pw_callback_test.d  bio_readbuffer_test  bioprinttest  bntest  buildtest_c_cmp  buildtest_c_configuration  buildtest_c_crmf  buildtest_c_ess  buildtest_c_fipskey  casttest  cipherbytes_test  cipherlist_test  ciphername_test  clienthellotest  cmsapitest  conf_include_test  constant_time_test  crltest  ct_test  d2i_test  danetest  defltfips_test  dtls_mtu_test  dtlstest  (+71 more)
proj/3th_lib/src/openssl/tools/: c_rehash
proj/3th_lib/src/openssl/util/: wrap.pl
proj/3th_lib/src/soci/: CHANGES  build.sh
proj/3th_lib/src/soci/docs/: 404.html  index.html
proj/device_manager/: CMakeLists.txt
proj/device_manager/drivers/: mqtt_driver.cpp  mqtt_driver.h
proj/device_manager/model/: create_table.sql  dev_conn_model.h  dev_model.h  entity_model.h  storage_factory.h
proj/device_manager/repository/: dev_conn_ctrl.h  dev_ctrl.h  entity_ctrl.h
proj/device_manager/tests/: test_db.cpp
proj/message_hub/: CMakeLists.txt  README.md
proj/message_hub/backends/mqtt/: mqtt_event_bus.cpp  mqtt_event_bus.h
proj/message_hub/core/: event.h  event_bus.h  event_bus_factory.cpp  event_bus_factory.h  event_types.h  message_hub.h
proj/message_hub/test/: test_mqtt_event_bus.cpp
proj/tests/: test_mqtt_client.cpp
(+46 files in other folders)
